# kedro-tutorial

./: Makefile  README.md  mkdocs.yml  pyproject.toml
conf/base/: catalog.yml  logging.yml  parameters.yml
conf/local/: credentials.yml
data/02_intermediate/: test_preprocessed.parquet  train_preprocessed.parquet
data/03_primary/: test_featured.parquet  train_featured.parquet  train_target.parquet
data/04_model_input/: X_train.parquet  X_val.parquet  y_train.parquet  y_val.parquet
data/05_models/: xgboost_model.pkl
data/06_model_output/: test_predictions.parquet
data/07_reporting/: submission.csv
data/07_reporting/metrics.json/2026-03-22T14.40.38.304Z/: metrics.json
data/07_reporting/metrics.json/2026-03-23T15.23.37.811Z/: metrics.json
docs/: 01-introduccion-a-kedro.md  02-recorrido-del-proyecto.md  03-pipelines-y-flujo.md  04-catalogo-y-parametros.md  05-como-ejecutarlo.md  index.md
docs/javascripts/: mermaid.js
notebooks/: eda.ipynb  utils.py
src/titanic_kedro/pipelines/data_ingestion/: nodes.py  pipeline.py
src/titanic_kedro/pipelines/feature_engineering/: nodes.py  pipeline.py
src/titanic_kedro/pipelines/inference/: nodes.py  pipeline.py
src/titanic_kedro/pipelines/model_training/: nodes.py  pipeline.py
src/titanic_kedro/pipelines/preprocessing/: nodes.py  pipeline.py
tests/pipelines/: pipeline_registry.py  test_feature_engineering.py  test_preprocessing.py
