[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic-kedro"
version = "0.1.0"
description = "Tutorial Kedro con dataset Titanic y XGBoost"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    { name = "Francisco Alfaro", email = "francisco.alfaro@usm.cl" }
]
dependencies = [
    "kedro>=0.19.0,<0.20.0",
    "kedro-datasets>=1.8.0,<2.0.0",
    "xgboost>=1.7.6,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pyarrow>=14.0.0,<20.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.13.2,<1.0.0",
    "joblib>=1.3.0,<2.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "rich>=13.0.0,<15.0.0",
    "itables>=2.7.2",
    "great-tables>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "ipykernel>=6.0.0,<8.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "ruff>=0.5.0,<1.0.0",
    "pre-commit>=3.0.0,<5.0.0",
]

[project.scripts]
titanic-kedro = "titanic_kedro.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
name = "titanic-kedro"
version = "0.1.0"
description = "Tutorial Kedro con dataset Titanic y XGBoost"
authors = ["Francisco Alfaro <francisco.alfaro@usm.cl>"]
readme = "README.md"
packages = [{ include = "titanic_kedro", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
kedro = ">=0.19.0,<0.20.0"
kedro-datasets = ">=1.8.0,<2.0.0"
xgboost = ">=1.7.6,<2.0.0"
scikit-learn = ">=1.3.0,<2.0.0"
pandas = ">=2.0.0,<3.0.0"
numpy = ">=1.24.0,<2.0.0"
pyarrow = ">=14.0.0,<20.0.0"
matplotlib = ">=3.10.8"
seaborn = ">=0.13.2"
joblib = ">=1.5.3"
PyYAML = ">=6.0.3"
rich = ">=14.3.3"
itables = ">=2.7.2"
great-tables = ">=0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"
pytest-cov = ">=7.1.0"
ipykernel = ">=7.2.0"
jupyter = ">=1.1.1"
ruff = ">=0.15.7"
pre-commit = ">=4.5.1"

[tool.poetry.scripts]
titanic-kedro = "titanic_kedro.__main__:main"

[tool.kedro]
package_name = "titanic_kedro"
project_name = "titanic-kedro"
kedro_init_version = "0.19.0"
source_dir = "src"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.kedro_telemetry]
project_id = "2d59b929a802446fad69def6bad962ee"
